Catching first keystrokes data! closes #5

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,9 @@
 
 	"mounts": [
 		"source=/dev/input,target=/workspaces/input,type=bind,consistency=cached"
-	]
+	],
+
+	"runArgs": ["--privileged"]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
